# webhook-service

./: .gitignore  CLAUDE.md  Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  test_brightdata.py  test_report_local.py  toner_pad_analysis.xlsx
.bkit/: agent-state.json
.bkit/runtime/: agent-state.json
.bkit/snapshots/: snapshot-1772066179941.json  snapshot-1772866446955.json  snapshot-1772877339462.json  snapshot-1772970450741.json  snapshot-1773015324707.json  snapshot-1773052067976.json  snapshot-1773123958139.json  snapshot-1773140222156.json  snapshot-1773141010625.json  snapshot-1773141055848.json  snapshot-1773141073509.json  snapshot-1773199388031.json  snapshot-1773202850678.json  snapshot-1773203733014.json  snapshot-1773229926009.json  snapshot-1773231382713.json  snapshot-1773399740506.json
.bkit/state/: memory.json  pdca-status.json
.claude/: settings.json
.claude/commands/: commit.md
.claude/hooks/: auto-commit.sh
amz_researcher/: models.py  orchestrator.py  router.py
amz_researcher/jobs/: collect.py
amz_researcher/migrations/: v10_request_log.py  v4_bright_data.py  (+4 more)
app/: config.py  dependencies.py  router.py
caddy/: Caddyfile.sidehook
docs/: .bkit-memory.json  .pdca-status.json  CADDY_SIDEHOOK.md  FASTAPI_MIGRATION_PLAN.md  SLACK_APP_SETUP.md  WEBHOOK_TESTING_GUIDE.md
jobs/: ad_migration.py  cash_mgmt.py  global_boosta.py  meta_ads_manager.py  upload_financial_db.py
lib/: google_sheet.py  mysql_connector.py  slack.py
scripts/: amz-weekly-collect.sh
tests/: conftest.py  test_webhook.py
(+93 files in other folders)
